<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddUserMedicineActivity">

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/sp_aprovedMedicine"
        android:layout_width="383dp"
        android:layout_height="91dp"
        android:hint="Search and Select Medicine"
        app:layout_constraintBottom_toTopOf="@+id/addSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/sp_aprovedMedicine"
        app:layout_constraintStart_toStartOf="@+id/sp_aprovedMedicine"
        app:layout_constraintTop_toBottomOf="@+id/sp_aprovedMedicine">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Kiekis"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expirationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/sp_aprovedMedicine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sp_aprovedMedicine"
        app:layout_constraintTop_toBottomOf="@+id/amountLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Galiojimo pabaigos data"
            android:inputType="text"
            android:focusable="false"
            android:onClick="showDatePickerDialog" />

    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/addSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share Medicine"
        android:visibility="invisible"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/sp_aprovedMedicine"
        app:layout_constraintStart_toStartOf="@+id/sp_aprovedMedicine"
        app:layout_constraintTop_toBottomOf="@+id/expirationLayout"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shareAmountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/sp_aprovedMedicine"
        app:layout_constraintStart_toStartOf="@+id/sp_aprovedMedicine"
        app:layout_constraintTop_toBottomOf="@+id/addSwitch"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editShareAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Share Amount"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_addUserMedicine"
        android:layout_width="241dp"
        android:layout_height="84dp"
        android:text="Pridėti"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareAmountLayout"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>



